--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "name": "laravel/lumen",
+    "description": "The Laravel Lumen Framework.",
+    "keywords": ["framework", "laravel", "lumen"],
+    "license": "MIT",
+    "type": "project",
     "require": {
         "laravel/lumen-framework": "~5.0@dev",
         "vlucas/phpdotenv": "~1.0"
@@ -9,10 +14,15 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        },
+        }
+    },
+    "autoload-dev": {
         "classmap": [
             "tests/"
         ]
+    },
+    "config": {
+        "preferred-install": "dist"
     },
     "repositories": [
         {
