--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "laravel/lumen-framework": "~5.0@dev",
+        "laravel/lumen-framework": "5.0.*",
         "vlucas/phpdotenv": "~1.0"
     },
     "require-dev": {
