Add DB_PREFIX config option
PR#19 https://github.com/laravel/lumen-framework/pull/19  on lumen-framework introduced DB_PREFIX.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DB_HOST=localhost
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+# DB_PREFIX=lumen_
 
 CACHE_DRIVER=memcached
 SESSION_DRIVER=memcached
