Add S3_URL option to .env.example
PR #14 on lumen-framework https://github.com/laravel/lumen-framework/pull/14 added S3_URL

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ QUEUE_DRIVER=database
 # S3_SECRET=null
 # S3_REGION=null
 # S3_BUCKET=null
+# S3_URL=null
 
 # RACKSPACE_USERNAME=null
 # RACKSPACE_KEY=null
