--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,9 @@ QUEUE_DRIVER=database
 # RACKSPACE_KEY=null
 # RACKSPACE_CONTAINER=null
 # RACKSPACE_REGION=null
+
+# MAIL_DRIVER=smtp
+# MAIL_HOST=mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
