--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ APP_FALLBACK_LOCALE=en
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
+DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
