--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "vlucas/phpdotenv": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "fzaninotto/faker": "~1.0"
     },
     "autoload": {
         "psr-4": {
@@ -27,5 +28,6 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
