--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
-DB_TIMEZONE=UTC
+DB_TIMEZONE=+00:00
 
 CACHE_DRIVER=memcached
 SESSION_DRIVER=memcached
