Trailing slashes directory condition
Add rewrite condition to the trailing slashes rewrite due to a redirect loop occurring when making a request to a public directory such as.

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,6 +6,7 @@
     RewriteEngine On
 
     # Redirect Trailing Slashes...
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
     # Handle Front Controller...
