Adding a MAIL_ENCRYPTION default value.

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ QUEUE_DRIVER=database
 # MAIL_PASSWORD=null
 # MAIL_FROM_ADDRESS=null
 # MAIL_FROM_NAME=null
+# MAIL_ENCRYPTION=null
 
 # FILESYSTEM_DRIVER=local
 # FILESYSTEM_CLOUD=s3
