--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,6 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomKey!!!
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
@@ -13,26 +10,4 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 CACHE_DRIVER=memcached
-SESSION_DRIVER=memcached
-QUEUE_DRIVER=database
-
-# MAIL_DRIVER=smtp
-# MAIL_HOST=mailtrap.io
-# MAIL_PORT=2525
-# MAIL_USERNAME=null
-# MAIL_PASSWORD=null
-# MAIL_FROM_ADDRESS=null
-# MAIL_FROM_NAME=null
-
-# FILESYSTEM_DRIVER=local
-# FILESYSTEM_CLOUD=s3
-
-# S3_KEY=null
-# S3_SECRET=null
-# S3_REGION=null
-# S3_BUCKET=null
-
-# RACKSPACE_USERNAME=null
-# RACKSPACE_KEY=null
-# RACKSPACE_CONTAINER=null
-# RACKSPACE_REGION=null
+QUEUE_DRIVER=sync
