--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,15 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "6.0.*",
-        "vlucas/phpdotenv": "~1.0"
+        "vlucas/phpdotenv": "~2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "fzaninotto/faker": "~1.0"
+        "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        },
-        "classmap": [
-            "database/"
-        ]
+        }
     },
     "autoload-dev": {
         "classmap": [
