adding post root package install composer script

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
             "tests/",
             "database/"
         ]
+    },
+    "scripts": {
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ]
     }
 }
