Added minimum-stability and prefer-stable

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,7 @@
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
         ]
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
