--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         ]
     },
     "scripts": {
+        "serve": "php -S 0.0.0.0:8000 -t public public/index.php",
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
         ]
