--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_TIMEZONE=UTC
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
+UNIX_SOCKET=
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
