move optimize-autoloader to correct composer.json section

--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,7 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "optimize-autoloader": true
+    "config": {
+        "optimize-autoloader": true
+    }
 }
