--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.7.*",
-        "vlucas/phpdotenv": "~2.2"
+        "laravel/lumen-framework": "5.8.*",
+        "vlucas/phpdotenv": "^3.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0"
+        "fzaninotto/faker": "^1.4",
+        "phpunit/phpunit": "^7.0",
+        "mockery/mockery": "^1.0"
     },
     "autoload": {
         "classmap": [
