--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
