--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,9 +1,12 @@
 php:
   preset: laravel
   enabled:
-    - alpha_ordered_imports
-  disabled:
     - length_ordered_imports
+  disabled:
+    - alpha_ordered_imports
     - unused_use
+  finder:
+    not-name:
+      - index.php
 js: true
 css: true
