--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^9.3"
     },
