Complete JWT Installation

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "chuckrincon/lumen-config-discover": "^1.0",
         "laravel/lumen-framework": "^8.0",
         "tymon/jwt-auth": "^1.0"
     },
