--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "chuckrincon/lumen-config-discover": "^1.0",
+        "fruitcake/laravel-cors": "^2.0",
         "laravel/lumen-framework": "^8.0",
         "tymon/jwt-auth": "^1.0"
     },
