--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+	"guzzlehttp/guzzle": "^7.4",
         "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
