Uses `"minimum-stability": "stable"` on composer

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,5 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "stable"
 }
