Keeps `"prefer-stable": true`

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
